# timeseriesutils

./: .gitignore  README.md  demo.ipynb  pyproject.toml  setup.py
docs/: demo_data.csv
src/timeseriesutils/: featurize.py
tests/: test_taylor_coefs_one_column_grp.py
timeseriesutils/: featurize.py
